--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@sanity/client": "^6.8.6",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "next": "13.4.2",
+    "next": "^14.0.3",
+    "next-sanity": "^6.0.5",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
+    "suspend-react": "^0.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
