--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.8.6",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
@@ -27,5 +28,8 @@
     "suspend-react": "^0.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
