--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.11",
     "@sanity/client": "^6.8.6",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.20.0",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -20,11 +22,13 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "^14.0.3",
-    "next-sanity": "^6.0.5",
+    "next-sanity": "^5.5.10",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.20.0",
     "server-only": "^0.0.1",
+    "styled-components": "^6.1.1",
     "suspend-react": "^0.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
