--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-maps": "^9.4.5",
     "sanity": "^3.20.0",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.1",
