--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.11",
+    "@react-google-maps/api": "^2.19.2",
     "@sanity/client": "^6.8.6",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.0",
