--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
+    "react-share": "^5.0.2",
     "sanity": "^3.20.0",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.1",
