--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.1",
     "react-share": "^5.0.2",
