--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.19.2",
     "@sanity/client": "^6.8.6",
     "@sanity/image-url": "^1.0.2",
@@ -20,9 +21,14 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "lucide-react": "^0.331.0",
     "next": "^14.0.3",
+    "next-cloudinary": "^5.20.0",
     "next-sanity": "^5.5.10",
     "nodemailer": "^6.9.7",
     "postcss": "8.4.23",
@@ -36,7 +42,9 @@
     "server-only": "^0.0.1",
     "styled-components": "^6.1.1",
     "suspend-react": "^0.1.3",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4"
   },
   "devDependencies": {
