--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-google-maps/api": "^2.19.2",
     "@sanity/client": "^6.8.6",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.0",
+    "@types/google.maps": "^3.55.3",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -33,6 +35,7 @@
     "nodemailer": "^6.9.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-dimmer": "^1.0.7",
     "react-dom": "18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-google-maps": "^9.4.5",
@@ -45,7 +48,8 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
