--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.16.1",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "^3.0.11",
@@ -24,10 +26,12 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "google-maps-react": "^2.0.6",
     "lucide-react": "^0.331.0",
     "next": "^14.0.3",
     "next-cloudinary": "^5.20.0",
@@ -40,6 +44,7 @@
     "react-facebook-pixel": "^1.0.4",
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.1",
+    "react-photo-album": "^2.3.1",
     "react-share": "^5.0.2",
     "sanity": "^3.20.0",
     "server-only": "^0.0.1",
@@ -49,7 +54,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
-    "vaul": "^0.9.0"
+    "vaul": "^0.9.0",
+    "yet-another-react-lightbox": "^3.17.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
