--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.37.2",
+    "@sendgrid/mail": "^8.1.3",
     "@types/google.maps": "^3.55.7",
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
@@ -43,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-google-maps": "^9.4.5",
+    "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-photo-album": "^2.3.1",
     "react-share": "^5.1.0",
