--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@portabletext/react": "^3.0.18",
@@ -32,7 +33,6 @@
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "google-maps-react": "^2.0.6",
     "lucide-react": "^0.331.0",
     "next": "^14.2.0",
     "next-cloudinary": "^5.20.0",
