--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "lucide-react": "^0.331.0",
+    "mongoose": "^8.4.4",
     "next": "^14.2.0",
     "next-cloudinary": "^5.20.0",
     "next-sanity": "^5.5.11",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "@types/mongoose": "^5.11.97",
     "@types/nodemailer": "^6.4.14"
   }
 }
