--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.7.0",
     "@portabletext/react": "^3.0.18",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-google-maps/api": "^2.19.3",
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
@@ -35,7 +38,7 @@
     "eslint-config-next": "13.4.2",
     "lucide-react": "^0.331.0",
     "mongoose": "^8.4.4",
-    "next": "^14.2.0",
+    "next": "^14.2.4",
     "next-cloudinary": "^5.20.0",
     "next-sanity": "^5.5.11",
     "nodemailer": "^6.9.13",
@@ -58,7 +61,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4",
     "vaul": "^0.9.0",
-    "yet-another-react-lightbox": "^3.17.2"
+    "yet-another-react-lightbox": "^3.17.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
