--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@hookform/resolvers": "^3.7.0",
     "@portabletext/react": "^3.0.18",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
     "@sanity/client": "^6.15.13",
     "@sanity/image-url": "^1.0.2",
@@ -33,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
