--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@sanity/vision": "^3.37.2",
     "@sendgrid/mail": "^8.1.3",
     "@types/google.maps": "^3.55.7",
-    "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -38,10 +37,12 @@
     "cloudinary": "^2.1.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "lucide-react": "^0.331.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "next": "^14.2.4",
     "next-cloudinary": "^5.20.0",
@@ -64,14 +65,17 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.0.4",
+    "ts-node": "^10.9.2",
     "vaul": "^0.9.0",
     "yet-another-react-lightbox": "^3.17.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/nodemailer": "^6.4.14"
+    "@types/node": "20.2.0",
+    "@types/nodemailer": "^6.4.14",
+    "typescript": "5.0.4"
   }
 }
