--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.7.0",
+    "@next/third-parties": "^14.2.7",
     "@portabletext/react": "^3.0.18",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -44,7 +45,7 @@
     "lucide-react": "^0.331.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
-    "next": "^14.2.4",
+    "next": "^14.2.7",
     "next-cloudinary": "^5.20.0",
     "next-sanity": "^5.5.11",
     "nodemailer": "^6.9.13",
