--- a/package.json
+++ b/package.json
@@ -66,17 +66,18 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "vaul": "^0.9.0",
     "yet-another-react-lightbox": "^3.17.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "@types/dotenv": "^8.2.0",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.2.0",
     "@types/nodemailer": "^6.4.14",
+    "ts-node": "^10.9.2",
     "typescript": "5.0.4"
   }
 }
