--- a/package.json
+++ b/package.json
@@ -9,75 +9,85 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.5.0",
     "@cloudinary/react": "^1.13.0",
-    "@cloudinary/url-gen": "^1.19.0",
-    "@googlemaps/js-api-loader": "^1.16.6",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.3",
-    "@hookform/resolvers": "^3.7.0",
-    "@next/third-parties": "^14.2.7",
-    "@portabletext/react": "^3.0.18",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@cloudinary/url-gen": "^1.21.0",
+    "@googlemaps/js-api-loader": "^1.16.8",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.2.13",
+    "@portabletext/react": "^3.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
-    "@sanity/client": "^6.15.13",
+    "@sanity/client": "^6.21.3",
+    "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.37.2",
+    "@sanity/ui": "^2.8.9",
+    "@sanity/vision": "^3.57.4",
     "@sendgrid/mail": "^8.1.3",
-    "@types/google.maps": "^3.55.7",
+    "@types/google.maps": "^3.58.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "cloudinary": "^2.1.0",
-    "clsx": "^2.1.0",
+    "cloudinary": "^2.5.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.331.0",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.4.4",
-    "next": "^14.2.7",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.6.3",
+    "next": "^14.2.13",
     "next-cloudinary": "^5.20.0",
     "next-sanity": "^5.5.11",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^6.9.15",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dimmer": "^1.0.7",
     "react-dom": "18.2.0",
     "react-facebook-pixel": "^1.0.4",
     "react-google-maps": "^9.4.5",
-    "react-hook-form": "^7.51.3",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
-    "react-photo-album": "^2.3.1",
+    "react-icons": "^5.3.0",
+    "react-photo-album": "^2.4.1",
     "react-share": "^5.1.0",
-    "sanity": "^3.37.2",
+    "sanity": "^3.57.4",
     "server-only": "^0.0.1",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.13",
     "suspend-react": "^0.1.3",
-    "tailwind-merge": "^2.2.2",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "yet-another-react-lightbox": "^3.17.2",
+    "ts-node": "^10.9.2",
+    "vaul": "^0.9.4",
+    "yet-another-react-lightbox": "^3.21.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12",
-    "@types/dotenv": "^8.2.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "20.2.0",
-    "@types/nodemailer": "^6.4.14",
-    "ts-node": "^10.9.2",
-    "typescript": "5.0.4"
+    "@types/nodemailer": "^6.4.16",
+    "typescript": "^5.6.2"
   }
 }
