--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.8",
     "@next/third-parties": "^14.2.13",
     "@portabletext/react": "^3.1.0",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
     "@sanity/client": "^6.21.3",
@@ -50,6 +55,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.331.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
@@ -58,6 +64,7 @@
     "next-sanity": "^5.5.11",
     "nodemailer": "^6.9.15",
     "postcss": "8.4.23",
+    "prisma": "^5.20.0",
     "react": "18.2.0",
     "react-dimmer": "^1.0.7",
     "react-dom": "18.2.0",
@@ -86,7 +93,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "20.2.0",
+    "@types/node": "^22.7.3",
     "@types/nodemailer": "^6.4.16",
     "typescript": "^5.6.2"
   }
