--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.5.0",
+    "@auth/mongodb-adapter": "^3.5.3",
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.21.0",
     "@googlemaps/js-api-loader": "^1.16.8",
@@ -35,33 +35,35 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
-    "@sanity/client": "^6.21.3",
+    "@sanity/client": "^6.22.0",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.59.0",
     "@sanity/ui": "^2.8.9",
-    "@sanity/vision": "^3.57.4",
+    "@sanity/vision": "^3.58.0",
     "@sendgrid/mail": "^8.1.3",
-    "@types/google.maps": "^3.58.0",
-    "@types/react": "18.2.6",
+    "@types/google.maps": "^3.58.1",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
+    "date-fns": "2.30.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.331.0",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.3",
+    "mongoose": "^8.7.0",
     "next": "^14.2.13",
     "next-cloudinary": "^5.20.0",
-    "next-sanity": "^5.5.11",
+    "next-sanity": "^9.5.0",
     "nodemailer": "^6.9.15",
     "postcss": "8.4.23",
     "prisma": "^5.20.0",
@@ -75,7 +77,7 @@
     "react-icons": "^5.3.0",
     "react-photo-album": "^2.4.1",
     "react-share": "^5.1.0",
-    "sanity": "^3.57.4",
+    "sanity": "^3.58.0",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.13",
     "suspend-react": "^0.1.3",
@@ -83,7 +85,8 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "vaul": "^0.9.4",
+    "update": "^0.7.4",
+    "vaul": "^0.9.9",
     "yet-another-react-lightbox": "^3.21.6",
     "zod": "^3.23.8"
   },
@@ -93,7 +96,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^22.7.3",
+    "@types/node": "^22.7.4",
     "@types/nodemailer": "^6.4.16",
     "typescript": "^5.6.2"
   }
