--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next/third-parties": "^14.2.13",
     "@portabletext/react": "^3.1.0",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
