--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@sanity/vision": "^3.58.0",
     "@sendgrid/mail": "^8.1.3",
     "@types/google.maps": "^3.58.1",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.3.10",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
