🚧 Added inventory pages
Products, vaccines and medicines.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.4.3",
     "@next/third-parties": "^14.2.16",
     "@portabletext/react": "^3.1.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "5.20.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -71,7 +71,7 @@
     "next-sanity": "^9.8.7",
     "nodemailer": "^6.9.15",
     "postcss": "8.4.23",
-    "prisma": "^5.22.0",
+    "prisma": "5.20.0",
     "react": "18.2.0",
     "react-dimmer": "^1.0.7",
     "react-dom": "18.2.0",
