--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.5.6",
     "date-fns": "2.30.0",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "8.0.0-rc22",
