--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "import-data": "bun run scripts/import-data.ts"
-
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.3",
@@ -21,7 +20,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@next/third-parties": "^14.2.17",
     "@portabletext/react": "^3.1.0",
-    "@prisma/client": "5.20.0",
+    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -75,7 +74,7 @@
     "next-sanity": "^9.8.10",
     "nodemailer": "^6.9.16",
     "postcss": "8.4.23",
-    "prisma": "5.20.0",
+    "prisma": "^5.22.0",
     "react": "18.2.0",
     "react-dimmer": "^1.0.7",
     "react-dom": "18.2.0",
@@ -98,6 +97,7 @@
     "typescript": "5.1.6",
     "update": "^0.7.4",
     "vaul": "^0.9.9",
+    "vercel": "^39.0.4",
     "yet-another-react-lightbox": "^3.21.6",
     "zod": "^3.23.8"
   },
