⬆️ Migrated from bun to pnpm

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "pnpm prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "import-data": "bun run scripts/import-data.ts"
+    "import-data": "tsx scripts/import-data.ts"
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.7.4",
@@ -47,8 +47,6 @@
     "@sanity/ui": "^2.10.9",
     "@sanity/vision": "^3.67.1",
     "@sendgrid/mail": "^8.1.4",
-    "@types/bun": "^1.1.14",
-    "@types/google.maps": "^3.58.1",
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.16",
     "@types/react-dom": "18.2.4",
@@ -61,9 +59,8 @@
     "date-fns": "2.30.0",
     "dotenv": "^16.4.7",
     "embla-carousel-react": "8.0.0-rc22",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "install": "^0.13.0",
+    "eslint": "9.17.0",
+    "eslint-config-next": "15.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.453.0",
@@ -75,11 +72,10 @@
     "nodemailer": "^6.9.16",
     "postcss": "8.4.23",
     "prisma": "^5.22.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-dimmer": "^1.0.7",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-facebook-pixel": "^1.0.4",
-    "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
@@ -95,7 +91,6 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.1.6",
-    "update": "^0.7.4",
     "vaul": "^0.9.9",
     "vercel": "^39.2.0",
     "yet-another-react-lightbox": "^3.21.7",
@@ -104,9 +99,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/bcryptjs": "^2.4.6",
+    "@types/google.maps": "^3.58.1",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/mongodb": "^4.0.7",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "tsx": "^4.19.2"
