--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 # production
 /build
 
+# DB migration
+/db-migration
+
 # misc
 .DS_Store
 *.pem
@@ -27,6 +30,7 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+env
 
 # vercel
 .vercel
