--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@sanity/ui": "^2.10.9",
     "@sanity/vision": "^3.67.1",
     "@sendgrid/mail": "^8.1.4",
+    "@tanstack/react-table": "^8.20.6",
     "@types/node-fetch": "^2.6.12",
     "@types/pg": "^8.11.10",
     "@types/react": "^18.3.16",
@@ -62,6 +63,7 @@
     "embla-carousel-react": "8.0.0-rc22",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.1",
+    "framer-motion": "^11.15.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.453.0",
@@ -92,6 +94,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.1.6",
+    "uuid": "^11.0.3",
     "vaul": "^0.9.9",
     "vercel": "^39.2.0",
     "yet-another-react-lightbox": "^3.21.7",
@@ -104,6 +107,8 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "prisma": "^6.1.0",
     "tsx": "^4.19.2"
   }
