--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "dotenv -e .env.local next dev",
     "build": "pnpm prisma generate && next build",
-    "start": "next start",
+    "start": "dotenv -e .env.production next start",
     "lint": "next lint",
     "lint:strict": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix .",
@@ -27,7 +27,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
     "@next/third-parties": "^14.2.20",
     "@portabletext/react": "^3.2.0",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.3.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -114,9 +114,10 @@
     "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
+    "dotenv-cli": "^8.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0",
-    "prisma": "^6.2.1",
+    "prisma": "^6.3.0",
     "tsx": "^4.19.2"
   }
 }
