🚧 File structure updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,44 @@
 services:
   postgres:
     image: postgres:16
+    container_name: vetapp-postgres
+    restart: unless-stopped
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: vetapp
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U myuser -d vetapp"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - vetapp-network
+
+  # Opcional: Herramienta de administración para PostgreSQL
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: vetapp-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    networks:
+      - vetapp-network
 
 volumes:
   postgres_data:
+    name: vetapp-postgres-data
+
+networks:
+  vetapp-network:
+    name: vetapp-network
+    driver: bridge
