🚧 First compiling version

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "backup:watch": "tsx watch src/scripts/backup.ts"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.7.4",
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
     "@googlemaps/js-api-loader": "^1.16.8",
@@ -33,14 +32,15 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
@@ -65,6 +65,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "csv-parse": "^5.6.0",
     "date-fns": "2.30.0",
     "dotenv": "^16.4.7",
@@ -73,8 +74,6 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.453.0",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.8.4",
     "next": "^14.2.20",
     "next-cloudinary": "^5.20.0",
     "next-sanity": "^9.8.25",
@@ -82,6 +81,7 @@
     "pg": "^8.13.1",
     "postcss": "8.4.23",
     "react": "18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dimmer": "^1.0.7",
     "react-dom": "18.3.1",
     "react-facebook-pixel": "^1.0.4",
@@ -90,6 +90,7 @@
     "react-icons": "^5.4.0",
     "react-photo-album": "^2.4.1",
     "react-share": "^5.1.1",
+    "react-to-print": "^3.0.5",
     "sanity": "^3.67.1",
     "sanity-plugin-seo": "1.2.7-alpha",
     "server-only": "^0.0.1",
