--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "sanity-plugin-seo": "1.2.7-alpha",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.13",
     "suspend-react": "^0.1.3",
     "tailwind-merge": "^2.5.5",
@@ -123,5 +124,6 @@
     "eslint-config-next": "14.1.0",
     "prisma": "^6.5.0",
     "tsx": "^4.19.2"
-  }
+  },
+  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
 }
