Upgrade to Next.js 15 and React 19 - Updated Next.js from 14.2.20 to 15.3.3 - Updated React from 18.3.1 to 19.1.0 - Fixed async params and searchParams compatibility - Updated TypeScript and Next.js configuration - Added migration guide

--- a/package.json
+++ b/package.json
@@ -73,16 +73,16 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.453.0",
-    "next": "^14.2.20",
+    "next": "^15.1.0",
     "next-cloudinary": "^5.20.0",
     "next-sanity": "^9.8.25",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "postcss": "8.4.23",
-    "react": "18.3.1",
+    "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dimmer": "^1.0.7",
-    "react-dom": "18.3.1",
+    "react-dom": "^19.0.0",
     "react-facebook-pixel": "^1.0.4",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
@@ -117,12 +117,12 @@
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^15.1.0",
     "prisma": "^6.6.0",
     "tsx": "^4.19.2"
   },
