--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env.local next dev",
+    "dev": "dotenv -e .env.local next dev --turbopack",
     "build": "pnpm prisma generate && next build",
     "start": "dotenv -e .env.production next start",
     "lint": "next lint",
@@ -20,41 +20,41 @@
     "@cloudinary/react": "^1.13.1",
     "@cloudinary/url-gen": "^1.21.0",
     "@googlemaps/js-api-loader": "^1.16.8",
-    "@headlessui/react": "^1.7.19",
+    "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@kinde-oss/kinde-auth-nextjs": "^2.6.1",
-    "@next/third-parties": "^14.2.20",
+    "@next/third-parties": "15.3.3",
     "@portabletext/react": "^3.2.0",
     "@prisma/client": "^6.6.0",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-collapsible": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-hover-card": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.4",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-google-maps/api": "^2.20.3",
     "@sanity/client": "^6.24.1",
-    "@sanity/icons": "^3.5.2",
+    "@sanity/icons": "^3.5.4",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/types": "^3.67.1",
-    "@sanity/ui": "^2.10.9",
-    "@sanity/vision": "^3.67.1",
+    "@sanity/types": "^3.68.1",
+    "@sanity/ui": "^2.10.11",
+    "@sanity/vision": "^3.68.1",
     "@sendgrid/mail": "^8.1.4",
     "@tanstack/react-table": "^8.20.6",
     "@types/node-fetch": "^2.6.12",
@@ -68,29 +68,29 @@
     "csv-parse": "^5.6.0",
     "date-fns": "2.30.0",
     "dotenv": "^16.4.7",
-    "embla-carousel-react": "8.0.0-rc22",
+    "embla-carousel-react": "8.6.0",
     "framer-motion": "^11.15.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.1.0",
     "lucide-react": "^0.453.0",
-    "next": "^14.2.20",
-    "next-cloudinary": "^5.20.0",
-    "next-sanity": "^9.8.25",
+    "next": "15.3.3",
+    "next-cloudinary": "7.0.0-beta.10",
+    "next-sanity": "^9.8.28",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "postcss": "8.4.23",
-    "react": "18.3.1",
-    "react-day-picker": "8.10.1",
+    "react": "19.1.0",
+    "react-day-picker": "9.7.0",
     "react-dimmer": "^1.0.7",
-    "react-dom": "18.3.1",
+    "react-dom": "19.1.0",
     "react-facebook-pixel": "^1.0.4",
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-photo-album": "^2.4.1",
-    "react-share": "^5.1.1",
+    "react-share": "^5.2.2",
     "react-to-print": "^3.0.5",
-    "sanity": "^3.67.1",
+    "sanity": "^3.68.1",
     "sanity-plugin-seo": "1.2.7-alpha",
     "server-only": "^0.0.1",
     "sharp": "^0.33.5",
@@ -103,7 +103,7 @@
     "ts-node": "^10.9.2",
     "typescript": "5.1.6",
     "uuid": "^11.0.3",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.2",
     "vercel": "^39.2.2",
     "yet-another-react-lightbox": "^3.21.7",
     "zod": "^3.24.1"
@@ -116,15 +116,21 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "19.1.2",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "15.3.3",
     "prisma": "^6.6.0",
     "tsx": "^4.19.2"
   },
-  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
+  "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.8",
+      "@types/react-dom": "19.1.6"
+    }
+  }
 }
