🚧 First part of testing setup

--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint",
     "lint:strict": "eslint --max-warnings=0 .",
     "lint:fix": "eslint --fix .",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
     "import-data": "tsx scripts/import-data.ts",
     "postinstall": "prisma generate",
     "backup": "sh src/scripts/backup.sh",
@@ -109,10 +117,15 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.0",
     "@portabletext/types": "^2.0.13",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/google.maps": "^3.58.1",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
@@ -123,6 +136,9 @@
     "dotenv-cli": "^8.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "15.3.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.0.0",
     "prisma": "^6.6.0",
     "tsx": "^4.19.2"
   },
