--- a/package.json
+++ b/package.json
@@ -24,7 +24,21 @@
     "setup:kinde": "node scripts/update-kinde-config.js",
     "deploy:dev": "node scripts/deploy.js development",
     "deploy:prod": "node scripts/deploy.js production",
-    "env:check": "node -e \"console.log('Environment:', process.env.NODE_ENV); console.log('Site URL:', process.env.NEXT_PUBLIC_SITE_URL);\""
+    "env:check": "node -e \"console.log('Environment:', process.env.NODE_ENV); console.log('Site URL:', process.env.NEXT_PUBLIC_SITE_URL);\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coverage:open": "jest --coverage && open coverage/lcov-report/index.html",
+    "test:coverage:unit": "jest --coverage --testPathIgnorePattern=integration --testPathIgnorePattern=e2e",
+    "test:coverage:summary": "jest --coverage --coverageReporters=text-summary",
+    "test:ci": "jest --ci --coverage --watchAll=false",
+    "test:integration": "jest --testPathPattern=__tests__/integration",
+    "test:middleware": "jest --testPathPattern=__tests__/middleware",
+    "test:api": "jest --testPathPattern=__tests__/api",
+    "test:auth": "jest --testPathPattern=__tests__/auth",
+    "test:db": "jest --testPathPattern=__tests__/database",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@cloudinary/react": "^1.13.1",
@@ -119,21 +133,35 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.40.0",
     "@portabletext/types": "^2.0.13",
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/google.maps": "^3.58.1",
+    "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.2",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
     "dotenv-cli": "^8.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "^15.3.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "msw": "^2.0.8",
     "prisma": "^6.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "tsx": "^4.19.2"
   },
   "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
