feat: implement build-time Prisma proxy and fix API routes
- Create comprehensive Prisma proxy that handles build-time operations
- Add safePrismaOperation helper for graceful build-time fallbacks
- Fix multiple API routes to use centralized Prisma instance
- Remove direct PrismaClient imports that bypass build-time handling
- Add build configuration with IS_BUILD_TIME detection
- Update inventory, client, auth-status, and webhook routes
- Implement mock responses for all Prisma operations during build

This addresses the 'Prisma client did not initialize yet' error during
Next.js build by providing safe fallback values when building.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "dotenv -e .env.local next dev",
     "dev:staging": "dotenv -e .env.development next dev",
     "build": "pnpm prisma generate && next build",
+    "build:safe": "IS_BUILD_TIME=true pnpm prisma generate && IS_BUILD_TIME=true next build",
     "build:development": "dotenv -e .env.development pnpm prisma generate && dotenv -e .env.development next build",
     "build:production": "dotenv -e .env.production pnpm prisma generate && dotenv -e .env.production next build",
     "start": "dotenv -e .env.production next start",
